# CrewManagement

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  running-essential.md  start.sh
L1SignalFabric/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
L1SignalFabric/api/: app.py  live.py
L1SignalFabric/connectors/: README.md  __init__.py
L1SignalFabric/core/: __init__.py  bus.py  connector.py  dedup.py  signal.py  watermark.py
L1SignalFabric/data/: backlog.jsonl  entities.json  seed_meta.json  timeline_future.jsonl
L1SignalFabric/demo/: README.md  __init__.py  email_normalize.py  generator.py  seed.py  stream.py
L1SignalFabric/docs/: COMPONENTS.md  CONNECTOR_SETUP.md  DESIGN.md  IMPLEMENTATION.md  L1_SignalFabric_Connector_Setup.docx  L1_SignalFabric_Design.docx  L1_SignalFabric_Implementation.docx  L1_SignalFabric_Plan.docx  L1_SignalFabric_Test.docx  L1_TO_L2_UNIFIED_RECORD.md  L2_Connector_Sample_Data.docx  L2_Connector_Sample_Data.xlsx  PLAN.md  TEST.md  md_to_docx.py
L1SignalFabric/l2/: __init__.py  maps.py  orgmap.py  record.py  store.py
L1SignalFabric/scripts/: demo1.py  gen_l2_sample_docx.py  gen_l2_sample_workbook.py  gmail_push_doctor.sh  smoke.py
L1SignalFabric/tests/: conftest.py  test.env  test_api.py  test_connectors_common.py  test_contract.py  test_database.py  test_demo_stream.py  test_erp.py  test_gmail.py  test_inmemory_bus.py  test_l2_pipe.py  test_live.py  test_msgraph_subscriptions.py  test_notion.py  (+6 more)
(+261 files in other folders)
